--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.4",
     "nodemon": "^2.0.22",
-    "supertest": "^6.3.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
+    "chai": "^4.3.7",
+    "jest": "^29.5.0",
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3"
   }
 }
