--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.2.4",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
+    "sib-api-v3-sdk": "^8.5.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
